課題テスト再提出
レスポンシブ対応作成

--- a/1-4/smartstyle.css
+++ b/1-4/smartstyle.css
@@ -11,6 +11,12 @@
     .content-top-right {
         width: 75px;
     }
+    .content-bottom {
+        width: 200px;
+    }
+    .footer {
+        width: 300px;
+    }
 }
 
 @media screen and (max-width: 479px) {
